--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@ MathJax.Hub.Config({
 <h1>Publications</h1>
 </div>
 
-<h2>Refereed Journal articles / Preprints</h2>
+<h2>Journal articles / Preprints</h2>
 <ul>
 
 <li>
