--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Allahabad, India<br /></p>
 
 <div class="infoblock">
 <div class="blockcontent">
-<p><pre>&ldquo;The most complex questions have the most simplest answers as amazingly simple and far-reaching natural laws govern the structure of complex networks that surround us.&rdquo;<br /></tt></p>
-&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Anonymous</pre></p>
+<p><pre>&ldquo;Sometimes the questions are complicated and the answers are simple.&rdquo;<br /></tt></p>
+&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Dr. Seuss</pre></p>
 </div>
 </div>
 
