--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Allahabad, India<br /></p>
 <div class="infoblock">
 <div class="blockcontent">
 <p><pre>&ldquo;Sometimes the questions are complicated and the answers are simple.&rdquo;<br /></tt></p>
-&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Dr. Seuss</pre></p>
+&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Dr. Seuss</pre></p>
 </div>
 </div>
 
