--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Allahabad, India<br /></p>
 
 <div class="infoblock">
 <div class="blockcontent">
-<p><pre>&ldquo;Sometimes the questions are complicated and the answers are simple.&rdquo;</tt>
+<p><pre></tt>&ldquo;Sometimes the questions are complicated and the answers .&rdquo;</p>
 &#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Dr. Seuss</pre></p>
 </div>
 </div>
