--- a/publications.html
+++ b/publications.html
@@ -112,7 +112,7 @@ doi: 10.1109/BSB.2016.7552164 <br />
 </li>
 
 <li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Role of Tole-like Receptors in the interplay between pathogen and damage associated molecular patterns </b></a><br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Role of Toll-like Receptors in the interplay between pathogen and damage associated molecular patterns </b></a><br />
 <div class="abs">
 <b>Abstract:</b> Various theoretical studies have been carried out to infer relevant protein-protein interactions among pathogens and their hosts. Such studies are generally based on preferential attachment of bacteria / virus to their human receptor homologs. We have analyzed 17 pathogenic species mainly belonging to bacterial and viral pathogenic classes, with the aim to identify the interacting human proteins which are targeted by both bacteria and virus specifically. Our study reveals that the TLRs play a crucial role between the pathogen-associated molecular patterns (PAMPs) and the damage associated molecular patterns (DAMPS). PAMPs include bacterial lipopolysaccharides (LPs), endotoxins, bacterial flagellin, lipoteichoic acid, peptidoglycan in bacterial organisms and nucleic acid variants associated with viral organisms, whereas DAMPs are associated with host biomolecules that perpetuate non-infectious inflammatory responses. We found out the presence of SOD1 and SOD2 (superoxide dismutase) is crucial, as it acts as an anti-oxidant and helps in eliminating oxidative stress by preventing damage from reactive oxygen species. Hence, such strategies can be used as new therapies for anti-inflammatory diseases with significant clinical outcomes
 </div>
@@ -131,7 +131,7 @@ arXiv: 1907.03512 <br />
 <li>
 <a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> A Contact Map-Based Approach To Predict Conformational Epitope Residues </b></a><br />
 <div class="abs">
-<b>Abstract:</b> We apply contact mapping techniques once we have successfully classified the exposed residues from the buried ones using some cut-off distance $\delta$, which are further grouped into clusters of exposed residues that fall under the threshold cut-off distance in contact map space.
+<b>Abstract:</b> We applied contact-mapping techniques once we have successfully classified the exposed residues from the buried ones using a cut-off distance $\delta$, which were further grouped into clusters of exposed residues in contact map space.
 </div>
 S. Chatterjee <br />
 M.Tech, IIIT-Allahabad <br />	
