--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ HPC Laboratory<br />
 4315, CC2-Building<br />
 IIIT-Allahabad<br />
 211012, India<br />
+Email:  RS171 ατ iiita δοτ ac δοτ in<br />	
 </p>
 	
 <div id="footer">
