--- a/contact.html
+++ b/contact.html
@@ -44,19 +44,18 @@ MathJax.Hub.Config({
 });
 </script>
 
-<body>
+	<body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">S. Chatterjee</div>
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="cv.pdf">CV</a></div>
-<div class="menu-category">Research</div>
+<div class="menu-item"><a href="index.html" class="current">About</a></div>
+<!-- <div class="menu-item"><a href="cv.pdf">CV</a></div> -->
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-<div class="menu-category">Miscellaneous</div>
-<div class="menu-item"><a href="contact.html" class="current">Contact</a></div>
+<div class="menu-item"><a href="notes.html">Notes</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
-
+	
 <td id="layout-content">
 <div id="toptitle">
 <h1>Contact</h1>
