--- a/publications.html
+++ b/publications.html
@@ -62,11 +62,10 @@ MathJax.Hub.Config({
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">S. Chatterjee</div>
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="cv.pdf">CV</a></div>
-<div class="menu-category">Research</div>
-<div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
-<div class="menu-category">Miscellaneous</div>
+<div class="menu-item"><a href="index.html" class="current">About</a></div>
+<!-- <div class="menu-item"><a href="cv.pdf">CV</a></div> -->
+<div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="notes.html">Notes</a></div>
 <div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 
