--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@ MathJax.Hub.Config({
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">S. Chatterjee</div>
-<div class="menu-item"><a href="index.html" class="current">About</a></div>
-<!-- <div class="menu-item"><a href="cv.pdf">CV</a></div> -->
+<div class="menu-item"><a href="index.html">About</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="notes.html">Notes</a></div>
-<div class="menu-item"><a href="contact.html">Contact</a></div>
+<div class="menu-item"><a href="contact.html" class="current">Contact</a></div>
+<!-- <div class="menu-item"><a href="cv.pdf">CV</a></div> -->
 </td>
 	
 <td id="layout-content">
