--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@ IIIT-Allahabad<br />
 
 <dl>
 <dt>Alternatively, you can contact me via email at the following address:</dt>
-<p> <a href="mailto:RS171@iiita.ac.in"> RS171 ατ iiita δοτ ac δοτ in </a> <br /> </p>
+<p> <a> RS171 ατ iiita δοτ ac δοτ in </a> <br /> </p>
 </dl>
 	
 </div>
