--- a/contact.html
+++ b/contact.html
@@ -103,12 +103,13 @@ HPC Laboratory<br />
 4315, CC2-Building<br />
 IIIT-Allahabad<br />
 211012, India<br />
+Email: RS171 ατ iiita δοτ ac δοτ in <br />
 </p>
 </dl>
 
 <dl>
 <dt>Alternatively, you can contact me via email at the following address:</dt>
-<p> <a> RS171 ατ iiita δοτ ac δοτ in </a> <br /> </p>
+<p> <a> suprateek δοτ  chatterjea ατ gmail δοτ com </a> <br /> </p>
 </dl>
 	
 </div>
