--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@ Email: RS171 ατ iiita δοτ ac δοτ in <br />
 </dl>
 
 <dl>
-<dt>Alternatively, you can contact me via email at the following address:</dt>
+<dt>Alternatively, you can contact me at the following address:</dt>
 <p> <a> suprateek δοτ  chatterjea ατ gmail δοτ com </a> <br /> </p>
 </dl>
 	
