--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@ Email: RS171 ατ iiita δοτ ac δοτ in <br />
 
 <dl>
 <dt>Alternatively, you can contact me at the following address:</dt>
-<p> <a> suprateek δοτ  chatterjea ατ gmail δοτ com </a> <br /> </p>
+<p> suprateek δοτ  chatterjea ατ gmail δοτ com <br /> </p>
 </dl>
 	
 </div>
