--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@ MathJax.Hub.Config({
 <td id="layout-content">
 <div id="toptitle">
 <h1>Contact</h1>
+
 </div>
 <style>
 	#map_canvas {
@@ -42,9 +43,18 @@ MathJax.Hub.Config({
         height: 400px;
 	}
 </style>
+<!-----------------
 
-<script src="https://maps.googleapis.com/maps/api/js">
+  <script src="https://maps.googleapis.com/maps/api/js">
+
+-------------------->    
+
+<!------------
+
+<script src="https://maps.googleapis.com/maps/api/js?key= 
+AIzaSyCq7IJU5iYuJUEBFXFvb4iNtxciQR-rZMc&callback=initMap">
 </script>
+
 <script>
     function initialize() {
         var mapCanvas = document.getElementById('map_canvas');
@@ -73,6 +83,13 @@ MathJax.Hub.Config({
 
 <div style="margin-left: 520px;">
 
+
+-------------->
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1801.6256002985695!2d81.7699488!3d25.429864!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1562299306037!5m2!1sen!2sin" width="500" height="520" frameborder="0" style="border:0" allowfullscreen>
+</iframe>
+
+
 <dl>
 <p> 
 HPC Laboratory<br />
@@ -99,26 +116,6 @@ Email: RS171 ατ iiita δοτ ac δοτ in <br />
 </tr>
 </table>	
 	
-<!-- No Facebook 
-
-<dl>
-<br />
-<img src="no_facebook.jpg" alt="Not f'd. You won't find me on Facebook" width="150"></a>
-
-
-<dl>
-<div id="footer-icons">
-<ul class="social">
-<a href="https://plus.google.com/112873162496270574424" target="_blank"><img src="https://ssl.gstatic.com/images/icons/gplus-16.png" /></a>
-<a href="https://www.linkedin.com/in/suprateekchatterjee/" target="_blank"><img src="http://www.scholarpedia.org/w/skins/vector/images/linkedin.png?303" /></a>
-<a href="https://github.com/suprateekchatterjee" target="_blank"><img src="https://assets-cdn.github.com/favicon.ico" /></a>
-</ul>
-</div>
-<br />
-</dl>
-
--->
-
 <!-- Google Analytics 
 
 <script>
