--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@ AIzaSyCq7IJU5iYuJUEBFXFvb4iNtxciQR-rZMc&callback=initMap">
 
 <div style="width: 100%; overflow: hidden;">
 
-<div style="width: 500px; height: 520px; float: left;" id="map_canvas"></div>
+<div style="width: 450px; height: 300px; float: left;" id="map_canvas"></div>
 
 <div style="margin-left: 520px;">
 
@@ -102,7 +102,7 @@ Email: RS171 ατ iiita δοτ ac δοτ in <br />
 
 <dl>
 <dt>Alternatively, you can contact me at the following address:</dt>
-<p> <a> suprateek δοτ  chatterjea ατ gmail δοτ com </a> <br /> </p>
+<p> suprateek δοτ  chatterjea ατ gmail δοτ com <br /> </p>
 </dl>
 	
 </div>
