--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@ MathJax.Hub.Config({
 
 <dl>
 HPC Laboratory<br />
-4315, CC2-Building<br />
+4315, Computer Center-2<br />
 IIIT-Allahabad<br />
 211012, India<br />
 Email: RS171 ατ iiita δοτ ac δοτ in <br />
