--- a/publications.html
+++ b/publications.html
@@ -107,7 +107,7 @@ doi: 10.1016/j.micpath.2023.106115 <br />
 S. Chatterjee, B.S. Sanjeev, <br />
 In <i>Proceedings of International Conference on Bioinformatics and Systems Biology (BSB)</i>, IEEE pp. 1-4, 04-06 March 2016. <br />
 doi: 10.1109/BSB.2016.7552164 <br />
-[<a href="https://doi.org/10.1109/BSB.2016.7552164" >doi</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] | [<a href ="https://ieeexplore.ieee.org/xpl/conhome/7548213/proceeding" >conference</a>] </a> <br />
+[<a href="https://doi.org/10.1109/BSB.2016.7552164" >doi</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [<a href="bib/chatterjee2016identification.bib" >BibTeX</a>] | [<a href ="https://ieeexplore.ieee.org/xpl/conhome/7548213/proceeding" >conference</a>] </a> <br />
 </li>
 
 <li>
