--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@ MathJax.Hub.Config({
 S. Chatterjee, B.S. Sanjeev, <br />
 <i>Microbial Pathogenesis</i>, 185 (106386), pp. 1-9, Dec 2023. <br />
 doi: 10.1016/j.micpath.2023.106386 <br />
-[<a href="https://doi.org/10.1016/j.micpath.2023.106386" >doi</a>] | [<a href="http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P3.pdf" >poster</a>] | [BibTeX] | [<a href="https://pubmed.ncbi.nlm.nih.gov/37865274/" >pubmed</a>] </a> <br />
+[<a href="https://doi.org/10.1016/j.micpath.2023.106386" >doi</a>] | [<a href="http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P3.pdf" >poster</a>] | [<a href="bib/chatterjee2023over.bib" >BibTeX</a>] | [<a href="https://pubmed.ncbi.nlm.nih.gov/37865274/" >pubmed</a>] </a> <br />
 </li>
 	
 <li>
@@ -96,7 +96,7 @@ doi: 10.1016/j.micpath.2023.106386 <br />
 S. Chatterjee, B.S. Sanjeev, <br />
 <i>Microbial Pathogenesis</i>, 180 (106115), pp. 1-7, July 2023. <br />
 doi: 10.1016/j.micpath.2023.106115 <br />
-[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >doi</a>] | [<a href="http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P2.pdf" >poster</a>] | [BibTeX] | [<a href="https://pubmed.ncbi.nlm.nih.gov/37137346/" >pubmed</a>] </a> <br />
+[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >doi</a>] | [<a href="http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P2.pdf" >poster</a>] | [<a href="bib/chatterjee2023community.bib" >BibTeX</a>] | [<a href="https://pubmed.ncbi.nlm.nih.gov/37137346/" >pubmed</a>] </a> <br />
 </li>		
 
 <li>
@@ -118,7 +118,7 @@ doi: 10.1109/BSB.2016.7552164 <br />
 S. Chatterjee, B.S. Sanjeev, <br />
 <i>In preparation</i>. <br />
 arXiv: 1907.03512 <br />
-[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/1907.03512" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P4.pdf" >poster</a>] | [BibTeX] | [<a href ="https://www.icts.res.in/program/dmph2019" >program</a>]</a> <br />
+[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/1907.03512" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P4.pdf" >poster</a>] | [<a href="bib/chatterjee2019role.bib" >BibTeX</a>] | [<a href ="https://www.icts.res.in/program/dmph2019" >program</a>]</a> <br />
 </li>	
 	
 </ul>
