--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ MathJax.Hub.Config({
 <tr>
 <td> <img src="sc1.jpg" alt="Suprateek Chatterjee"  width="200px" height="300px" /> </td>
 <td align="left">
-<p>Researcher<br />
+<p>Department of Applied Sciences<br />
 <a href="https://www.iiita.ac.in/" >Indian Institute of Information Technology, Allahabad</a><br />
 Allahabad, India<br /></p>
 </td>
