--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,7 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">S. Chatterjee</div>
 <div class="menu-item"><a href="index.html">About</a></div>
+<div class="menu-item"><a href="cv.html">Bio</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 <div class="menu-item"><a href="notes.html">Notes</a></div>
 <div class="menu-item"><a href="contact.html">Contact</a></div>
