--- a/notes.html
+++ b/notes.html
@@ -39,7 +39,8 @@ MathJax.Hub.Config({
 
 
 <h2>Problem Statement</h2>
-<p>Consider a system of <img class="eq" src="eqs/9984030031-130.png" alt="N" style="vertical-align: -0px" /> experts labelled <img class="eq" src="eqs/625108435062753842-130.png" alt="1,2,dots,N" style="vertical-align: -4px" />. There's a player who chooses an expert, say <img class="eq" src="eqs/13440040424-130.png" alt="i" style="vertical-align: -1px" />, and bears a loss equal to the loss of expert <img class="eq" src="eqs/13440040424-130.png" alt="i" style="vertical-align: -1px" />. The losses of each of the expert are revealed only after the player chooses the expert. This game continues on for, say, <img class="eq" src="eqs/14848044661-130.png" alt="t" style="vertical-align: -1px" /> rounds. The losses of each expert will be different in different round. The player's strategy is to choose the experts in each round such that his total loss is minimized.</p>
+<p>Finding communities within an arbitrary network can be a computationally difficult task. The number of communities, if any, within the network is typically unknown and the communities are often of unequal size and/or density. Despite these difficulties, however, several methods for community finding have been developed and employed with varying levels of success. </p>
+
 <h2>Example</h2>
 <p>As an example, let <img class="eq" src="eqs/4612179489516983986-130.png" alt="l_i^{(t)}" style="vertical-align: -7px" /> denote the loss associated with expert <img class="eq" src="eqs/13440040424-130.png" alt="i" style="vertical-align: -1px" /> at time <img class="eq" src="eqs/14848044661-130.png" alt="t" style="vertical-align: -1px" />.  We can have the following possible scenario:</p>
 <table id="eg">
