--- a/notes.html
+++ b/notes.html
@@ -39,7 +39,8 @@ MathJax.Hub.Config({
 
 
 <h2>Problem Statement</h2>
-<p>Finding communities within an arbitrary network can be a computationally difficult task. The number of communities, if any, within the network is typically unknown and the communities are often of unequal size and/or density. Despite these difficulties, however, several methods for community finding have been developed and employed with varying levels of success. </p>
+<p>Finding communities within an arbitrary network can be a computationally difficult task. The number of communities, if any, within the network is typically unknown and the communities are often of unequal size and/or density. Despite these difficulties, however, several methods for community finding have been developed and employed with varying levels of success. The Louvain method for community detection is a method to extract non-overlapping communities from large networks created by Blondel et al.[1] from the University of Louvain (the source of this method's name).
+The method is a greedy optimization method that appears to run in time <annotation encoding="application/x-tex">{\displaystyle O(n\cdot \log n)}</annotation> where n is the number of nodes in the network.</p>
 
 <h2>Example</h2>
 <p>As an example, let <img class="eq" src="eqs/4612179489516983986-130.png" alt="l_i^{(t)}" style="vertical-align: -7px" /> denote the loss associated with expert <img class="eq" src="eqs/13440040424-130.png" alt="i" style="vertical-align: -1px" /> at time <img class="eq" src="eqs/14848044661-130.png" alt="t" style="vertical-align: -1px" />.  We can have the following possible scenario:</p>
