--- a/notes.html
+++ b/notes.html
@@ -46,8 +46,7 @@ The method is a greedy optimization method that appears to run in time <annotati
 <p>As an example, let <img class="eq" src="eqs/4612179489516983986-130.png" alt="l_i^{(t)}" style="vertical-align: -7px" /> denote the loss associated with expert <img class="eq" src="eqs/13440040424-130.png" alt="i" style="vertical-align: -1px" /> at time <img class="eq" src="eqs/14848044661-130.png" alt="t" style="vertical-align: -1px" />.  We can have the following possible scenario:</p>
 
 <table border="1" class="wikitable">
-<caption>Modularity Optimization Comparison<sup id="cite_ref-10" class="reference"><a href="#cite_note-10">&#91;10&#93;</a></sup>
-</caption>
+<caption>Modularity Optimization Comparison</caption>
 <tbody>
 <tr>
 <th>
