--- a/notes.html
+++ b/notes.html
@@ -39,9 +39,7 @@ MathJax.Hub.Config({
 
 
 <h2>Problem Statement</h2>
-<p>Finding communities within an arbitrary network can be a computationally difficult task. The number of communities, if any, within the network is typically unknown and the communities are often of unequal size and/or density. Despite these difficulties, however, several methods for community finding have been developed and employed with varying levels of success. The Louvain method for community detection is a method to extract non-overlapping communities from large networks created by Blondel et al.[1] from the University of Louvain (the source of this method's name).</p>
-
-<p>The <b>Louvain method for community detection</b> is a method to extract non-overlapping communities from large networks created by <a href="/wiki/Vincent_Blondel" title="Vincent Blondel">Blondel</a> <i>et al</i>.<sup id="cite_ref-Louvain_1-0" class="reference"><a href="#cite_note-Louvain-1">&#91;1&#93;</a></sup> from the <a href="/wiki/Universit%C3%A9_catholique_de_Louvain" title="Université catholique de Louvain">University of Louvain</a> (the source of this method's name). The method is a greedy optimization method that appears to run in time <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle O(n\cdot \log n)}">
+<p>Finding communities within an arbitrary network can be a computationally difficult task. The number of communities, if any, within the network is typically unknown and the communities are often of unequal size and/or density. Despite these difficulties, however, several methods for community finding have been developed and employed with varying levels of success. The Louvain method for community detection is a method to extract non-overlapping communities from large networks. The method is a greedy optimization method that appears to run in time <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle O(n\cdot \log n)}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
@@ -66,7 +64,7 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle n}</annotation>
   </semantics>
-</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/a601995d55609f2d9f5e233e36fbe9ea26011b3b" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.395ex; height:1.676ex;" alt="n"></span> is the number of nodes in the network.<sup id="cite_ref-2" class="reference"><a href="#cite_note-2">&#91;2&#93;</a></sup>
+</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/a601995d55609f2d9f5e233e36fbe9ea26011b3b" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.395ex; height:1.676ex;" alt="n"></span> is the number of nodes in the network.
 </p>
 	
 <h2>Example</h2>
