--- a/notes.html
+++ b/notes.html
@@ -68,7 +68,7 @@ MathJax.Hub.Config({
 </p>
 	
 <h2>Example</h2>
-<p>As an example, let <img class="eq" src="eqs/4612179489516983986-130.png" alt="l_i^{(t)}" style="vertical-align: -7px" /> denote the loss associated with expert <img class="eq" src="eqs/13440040424-130.png" alt="i" style="vertical-align: -1px" /> at time <img class="eq" src="eqs/14848044661-130.png" alt="t" style="vertical-align: -1px" />.  We can have the following possible scenario:</p>
+<p>When comparing modularity optimization methods, the two measures of importance are the speed and the resulting modularity value. A higher speed is better as it shows a method is more efficient than others and a higher modularity value is desirable as it points to having better-defined communities. The compared methods are the algorithm of Clauset, Newman, and Moore, Pons and Latapy, and Wakita and Tsurumi.</p>
 
 <table border="1" class="wikitable">
 <caption>Modularity Optimization Comparison</caption>
