--- a/notes.html
+++ b/notes.html
@@ -39,7 +39,7 @@ MathJax.Hub.Config({
 
 
 <h2>Problem Statement</h2>
-<p>Finding communities within an arbitrary network can be a computationally difficult task. The number of communities, if any, within the network is typically unknown and the communities are often of unequal size and/or density. Despite these difficulties, however, several methods for community finding have been developed and employed with varying levels of success. The Louvain method for community detection is a method to extract non-overlapping communities from large networks. The method is a greedy optimization method that appears to run in time <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle O(n\cdot \log n)}">
+<p>Finding communities within an arbitrary network can be a computationally difficult task. The number of communities, if any, within the network is typically unknown and the communities are often of unequal size and/or density. Despite these difficulties, however, several methods for community detection have been developed and employed with varying levels of success. The Louvain method for community detection is a method to extract non-overlapping communities from large networks. The method is a greedy optimization method that appears to run in time <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle O(n\cdot \log n)}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
