--- a/notes.html
+++ b/notes.html
@@ -491,7 +491,11 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle Q_{c}={\frac {\Sigma _{in}}{2m}}-({\frac {\Sigma _{tot}}{2m}})^{2},}</annotation>
   </semantics>
+<div class="infoblock">
+<div class="blockcontent">
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/ed8d9a7ab808cec32039977be5d3d32e58954e11" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -1.838ex; width:21.263ex; height:5.176ex;" alt="{\displaystyle Q_{c}={\frac {\Sigma _{in}}{2m}}-({\frac {\Sigma _{tot}}{2m}})^{2},}"></span>
+</div>
+</div>	
 </p><p>where
 </p>
 <ul><li><span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle \Sigma _{in}}">
@@ -976,7 +980,8 @@ To view the above loss per round, divide the whole equation by <img class="eq" s
 
 <div class="eqwl"><img class="eqwl" src="eqs/447563752154312336-130.png" alt=" forall i textup{~~} frac{1}{T} sum_{t=1}^T mathbf{p}^{(t)} cdot mathbf{l}^{(t)} le frac{1}{T} sum_{t=1}^T l_i^{(t)} + eta " />
 <br /></div></div></div>
-<h3>Exercises</h3>
+
+<h3>References</h3>
 <p>A few exercises which can be tried out to fully internalize the concept:</p>
 <ol>
 <li><p>Generalize for <img class="eq" src="eqs/8626947802440990825-130.png" alt="l_i^{(t)} in [-1,1]" style="vertical-align: -7px" />.</p>
