--- a/notes.html
+++ b/notes.html
@@ -788,7 +788,11 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle \Delta Q={\bigg [}{\frac {\Sigma _{in}+2k_{i,in}}{2m}}-{\bigg (}{\frac {\Sigma _{tot}+k_{i}}{2m}}{\bigg )}^{2}{\bigg ]}-{\bigg [}{\frac {\Sigma _{in}}{2m}}-{\bigg (}{\frac {\Sigma _{tot}}{2m}}{\bigg )}^{2}-{\bigg (}{\frac {k_{i}}{2m}}{\bigg )}^{2}{\bigg ]}}</annotation>
   </semantics>
+  <div class="infoblock">
+  <div class="blockcontent"> 
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/fb8524ddd4e6441ac4aea720d93f4aa8b9efa28a" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -2.505ex; width:71.548ex; height:6.509ex;" alt="{\displaystyle \Delta Q={\bigg [}{\frac {\Sigma _{in}+2k_{i,in}}{2m}}-{\bigg (}{\frac {\Sigma _{tot}+k_{i}}{2m}}{\bigg )}^{2}{\bigg ]}-{\bigg [}{\frac {\Sigma _{in}}{2m}}-{\bigg (}{\frac {\Sigma _{tot}}{2m}}{\bigg )}^{2}-{\bigg (}{\frac {k_{i}}{2m}}{\bigg )}^{2}{\bigg ]}}"></span>
+  </div>
+  </div>	
 </p><p>Where <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle \Sigma _{in}}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
