--- a/notes.html
+++ b/notes.html
@@ -945,7 +945,7 @@ MathJax.Hub.Config({
 <h3>References</h3>
 <p>A few exercises which can be tried out to fully internalize the concept:</p>
 <ol>
-<li><p>Generalize for <img class="eq" src="eqs/8626947802440990825-130.png" alt="l_i^{(t)} in [-1,1]" style="vertical-align: -7px" />.</p>
+<li><p><a href="http://www.iiita.ac.in/">Indian Institute of Information Technology, Allahabad, </a></p>
 </li>
 <li><p>What if <img class="eq" src="eqs/6725424298475802099-130.png" alt="l_i^{(t)} in [-rho,rho]" style="vertical-align: -7px" />.</p>
 </li>
