--- a/notes.html
+++ b/notes.html
@@ -945,9 +945,9 @@ MathJax.Hub.Config({
 <h3>References</h3>
 <p>A few exercises which can be tried out to fully internalize the concept:</p>
 <ol>
-<li><p><a href="http://www.iiita.ac.in/">Indian Institute of Information Technology, Allahabad, </a></p>
+<li><p><a href="https://snap.stanford.edu/class/cs224w-2015/handouts.html">CS224W: Social and Information Network Analysis </a></p>
 </li>
-<li><p>What if <img class="eq" src="eqs/6725424298475802099-130.png" alt="l_i^{(t)} in [-rho,rho]" style="vertical-align: -7px" />.</p>
+<li><p><a href="https://ocw.mit.edu/courses/1-022-introduction-to-network-models-fall-2018/pages/lecture-notes/"> 1.022 Introduction To Network Models </a></p>
 </li>
 <li><p>Using the update rule <img class="eq" src="eqs/2140410865068704549-130.png" alt="w_i^{(t+1)} = w_i^{(t)} (1 - epsilon l_i^{(t)})" style="vertical-align: -7px" /> and <img class="eq" src="eqs/8626947802440990825-130.png" alt="l_i^{(t)} in [-1,1]" style="vertical-align: -7px" />, prove that <img class="eq" src="eqs/3611701353221140151-130.png" alt="forall i, textup{~~} sum_{t=1}^T mathbf{p}^{(t)} cdot mathbf{l}^{(t)} le sum_{t=1}^T l_i^{(t)} + frac{ln N}{epsilon} + epsilon sum_{t=1}^T |l_i^{(t)}|" style="vertical-align: -8px" />.</p>
 </li>
