--- a/notes.html
+++ b/notes.html
@@ -945,13 +945,13 @@ MathJax.Hub.Config({
 <h3>References</h3>
 <p>A few exercises which can be tried out to fully internalize the concept:</p>
 <ol>
+<li><p><a href="https://ocw.mit.edu/courses/1-022-introduction-to-network-models-fall-2018/pages/readings/"> 1.022 Introduction To Network Models </a></p>
+</li>	
+<li><p><a href="https://ocw.mit.edu/courses/7-89j-topics-in-computational-and-systems-biology-fall-2010/pages/readings/">7.89J Topics In Computational And Systems Biology </a></p>
+</li>
+<li><p><a href="https://ocw.mit.edu/courses/hst-508-genomics-and-computational-biology-fall-2002/pages/readings/">HST.508 Genomics And Computational Biology </a></p>
+</li>
 <li><p><a href="https://snap.stanford.edu/class/cs224w-2015/handouts.html">CS224W: Social and Information Network Analysis </a></p>
-</li>
-<li><p><a href="https://ocw.mit.edu/courses/1-022-introduction-to-network-models-fall-2018/pages/lecture-notes/"> 1.022 Introduction To Network Models </a></p>
-</li>
-<li><p>Using the update rule <img class="eq" src="eqs/2140410865068704549-130.png" alt="w_i^{(t+1)} = w_i^{(t)} (1 - epsilon l_i^{(t)})" style="vertical-align: -7px" /> and <img class="eq" src="eqs/8626947802440990825-130.png" alt="l_i^{(t)} in [-1,1]" style="vertical-align: -7px" />, prove that <img class="eq" src="eqs/3611701353221140151-130.png" alt="forall i, textup{~~} sum_{t=1}^T mathbf{p}^{(t)} cdot mathbf{l}^{(t)} le sum_{t=1}^T l_i^{(t)} + frac{ln N}{epsilon} + epsilon sum_{t=1}^T |l_i^{(t)}|" style="vertical-align: -8px" />.</p>
-</li>
-<li><p>Suppose <img class="eq" src="eqs/6540227361925785915-130.png" alt="l_i^{(t)} in [0,rho]" style="vertical-align: -7px" />. Using the same update rule as above, prove that for <img class="eq" src="eqs/839423689295431078-130.png" alt="T ge frac{4 rho ln N}{eta^2}" style="vertical-align: -10px" />, <img class="eq" src="eqs/6042404846446446367-130.png" alt="frac{1}{T} sum_t mathbf{p}^{(t)} cdot mathbf{l}^{(t)} le frac{1}{T} sum_t l_i^{(t)} + eta" style="vertical-align: -8px" />.</p>
 </li>
 </ol>
 
