--- a/notes.html
+++ b/notes.html
@@ -945,12 +945,14 @@ MathJax.Hub.Config({
 <h3>References</h3>
 <p>A few exercises which can be tried out to fully internalize the concept:</p>
 <ol>
-<li><p><a href="https://ocw.mit.edu/courses/1-022-introduction-to-network-models-fall-2018/pages/readings/"> 1.022 Introduction To Network Models </a></p>
+<li><p><a href="https://ocw.mit.edu/courses/1-022-introduction-to-network-models-fall-2018/pages/readings/"> 1.022: Introduction To Network Models </a></p>
 </li>	
-<li><p><a href="https://ocw.mit.edu/courses/7-89j-topics-in-computational-and-systems-biology-fall-2010/pages/readings/">7.89J Topics In Computational And Systems Biology </a></p>
+<li><p><a href="https://ocw.mit.edu/courses/7-89j-topics-in-computational-and-systems-biology-fall-2010/pages/readings/">7.89J: Topics In Computational And Systems Biology </a></p>
 </li>
-<li><p><a href="https://ocw.mit.edu/courses/hst-508-genomics-and-computational-biology-fall-2002/pages/readings/">HST.508 Genomics And Computational Biology </a></p>
+<li><p><a href="https://ocw.mit.edu/courses/hst-508-genomics-and-computational-biology-fall-2002/pages/readings/">HST.508: Genomics And Computational Biology </a></p>
 </li>
+<li><p><a href="https://web.stanford.edu/class/cs246/">CS246: Mining Massive Data Sets </a></p>
+</li>	
 <li><p><a href="https://snap.stanford.edu/class/cs224w-2015/handouts.html">CS224W: Social and Information Network Analysis </a></p>
 </li>
 </ol>
